--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, user-scalable=no" />
     <title>AI Model Match</title>
   </head>
-  <body>
+  <body style="background-color: #d5d5d525;">
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
