--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, user-scalable=no" />
     <title>AI Model Match</title>
+    <script src="https://tally.so/widgets/embed.js"></script>
   </head>
   <body style="background-color: #d5d5d525;">
     <div id="root"></div>
